# 2762562B-P4-Computer-Lab

./: LICENSE  README.md  pyproject.toml
Demo/: Assess Demo Notebook (1).ipynb  Assess Demo Notebook (2).ipynb  Assess Demo Notebook.ipynb  Assess.ipynb  Fitting Demo Notebook.ipynb  Fitting.ipynb  Pipeline Demo Notebook (1).ipynb  Pipeline Demo Notebook.ipynb  Sim Demo Notebook.ipynb  Sim.ipynb  Visualise Demo Notebook.ipynb  Visualise.ipynb  _demos_readme.md  pipeline.ipynb  uml Demo Notebook.ipynb  uml.ipynb
PhysComp/: __init__.py  assess.py  fitting.py  pipeline.py  sim.py  uml.py  visual.py
PhysComp/Sim/: __init__.py  sim_dataset.py
PhysComp/UML/: __init__.py  adjusted_r2.py  decomp.py  find_elbow.py
PhysComp/fitting/: __init__.py  linear_fit.py  periodic_fit.py  polynomial.py
code_functions/: __init__.py  add.py  fitting.py  math.py
