[project]
name = "P4_Complab_2762562B"
version = "0.1.1"
authors = [
  { name="2762562B", email="2762562B@student.ac.gla.uk" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = []

[tool.setuptools.packages.find]
include = ["Demo*", "PhysComp*"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/aedanbuchan/2762562B-P4-Computer-Lab"
Issues = "https://github.com/aedanbuchan/2762562B-P4-Computer-Lab/issues"
